# bicleaner-hardrules

./: .gitignore  .gitmodules  .requirements.txt.swp  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
hardrules/: .hardrules.py.swp  __init__.py  bicleaner_hardrules.py  hardrules.py  training.py  unicodedata2.py  util.py
scripts/: bicleaner-hardrules  convert_to_generic_platform_wheel.py  release.sh
src/hardrules/: __init__.py  bicleaner_hardrules.py  hardrules.py  lm.py  writing_scripts.py
tests/: hardrules_test.py
